<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="the_himadri_boys_hostel_is_newly_constructed_hostel_and_started_functioning_in_2013_the_hostel_has_198_triplet_rooms_to_accommodate_approximately_594_students_the_hostel_has_07_floors_and_lift_facility_is_also_available_in_the_hostel_this_hostel_has_furnished_dining_hall_facility_the_hostel_is_well_equipped_with_basic_facilities_like_geysers_in_every_bathroom_water_cooler_and_deep_freezer_besides_this_the_internet_and_led_facility_is_also_available_in_of_the_hostel_the_hostel_has_a_big_recreation_hall_which_caters_to_the_needs_of_indoor_games_like_badminton_table_tennis_etc_the_volleyball_and_basketball_courts_are_also_available_in_the_hostel">The HIMADRI BOYS HOSTEL is newly constructed hostel and started functioning in 2013. The hostel has 198 (triplet) rooms to accommodate approximately 594 students. The hostel has 07 floors and lift facility is also available in the hostel. This hostel has furnished dining hall facility. The hostel is well equipped with basic facilities like geysers in every bathroom, water cooler and deep freezer. Besides this, the internet and LED facility is also available in of the hostel. The hostel has a big recreation hall which caters to the needs of indoor games like, badminton, Table Tennis, etc. The Volleyball and Basketball Courts are also available in the hostel.</string>
    <string name="ambika_girls_hostel">AMBIKA GIRLS HOSTEL</string>
    <string name="nitwebsite">
    https://nith.ac.in/
    </string>
    <string-array name="year">
        <item>1st year</item>
        <item>2nd year</item>
        <item>3rd year</item>
        <item>4th year</item>
        <item>5th year</item>
    </string-array>
    <string name="SinghaSir">
        <b>A.S Singha  </b>\n
        <b>Head Of Department</b>\n
        Professor and Dean , Chemistry Department\n
       Phone no. 254120\n
        E-mail: asingha@nith.ac.in\n
    </string>
    <string name="BhartiMam">
        <b>Bharti Gaur  </b>\n
        Associate Professor , Chemistry Department\n
       Phone no. 254156\n
        E-mail: bhartigaur@nith.ac.in\n
    </string>
    <string name="PamitaAvasthi">
        <b>Pamita Avasthi  </b>\n
       Associate Professor , Chemistry Department\n
       Phone no. 254140\n
        E-mail: pamita@nith.ac.in\n
    </string>
    <string name="GhoshSir">
        <b>Kalyan Sundar Ghosh  </b>\n
        Assistant Professor(Grade-1) , Chemistry Department\n
       Phone no. 254104\n
        E-mail: Kalyan@nith.ac.in\n
    </string>
    <string name="JaiSir">
        <b>Jai Prakash Sir </b>\n
        Assistant Professor (Grade-2) , Chemistry Department\n
       Phone no. 254102\n
        E-mail: jaip@nith.ac.in\n
    </string>
    <string name="JalbirSir">
        <b>Jalbir Kherb </b>\n
       Assistant Professor(Grade-2), Chemistry Department\n
       Phone no. 254101\n
        E-mail: jalbir@nith.ac.in\n
    </string>
    <string name="RajSir">
        <b>Raj Kaushal  </b>\n
         Assistant Professor(Grade-2), Chemistry Department\n
       Phone no. 254154\n
        E-mail: rajkaushal@nith.ac.in\n
    </string>
    <string name="SunilSir">
        <b>Dr.Sunil  </b>\n
        Professor and Dean , Mathematics Science And Computing Department\n
       Phone no. 254134\n
        E-mail: sunil@nith.ac.in\n
    </string>
    <string name="YDSharmaSir">
        <b>Y.D.Sharma </b>\n
        <b>Head Of Department</b>\n
        Professor and Dean , Mathematics Science And Computing Department\n
       Phone no. 254126\n
        E-mail: yds@nith.ac.in\n
    </string>
    <string name="PawanSir">
        <b>Pawan Kr. Sharma  </b>\n
      Associate Professor, Mathematics Science And Computing Department\n
       Phone no. 254144\n
        E-mail: psharma@nith.ac.in\n
    </string>
    <string name="VatsSir">
        <b>R.K.Vats </b>\n
       Associate Professor, Mathematics Science And Computing Department\n
       Phone no. 254108\n
        E-mail: rkvats@nith.ac.in\n
    </string>
    <string name="NehaMam">
        <b>Neha Yadav </b>\n
        Assistant Professor (Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: nyadav@nith.ac.in\n
    </string>
    <string name="AbhiSir">
        <b>Abhishek Singh </b>\n
       Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: jalbir@nith.ac.in\n
    </string>
    <string name="NidhiMam">
        <b>Nidhi Singh  </b>\n
         Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: nidhi@nith.ac.in\n
    </string>
    <string name="OPSir">
        <b>Om Prakash Yadav  </b>\n
         Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: opyadv@nith.ac.in\n
    </string>
    <string name="RajeshSir">
        <b>Rajesh Kumar Sharma</b>\n
         Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: rajeshnith@nith.ac.in\n
    </string>
    <string name="rifaqatSir">
        <b>Rifaqat Ali </b>\n
        Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: rifaqatali@nith.ac.in\n
    </string>
    <string name="SubitSir">
        <b>Subit Kumar Jain  </b>\n
         Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: jain.subit@nith.ac.in\n
    </string>
    <string name="SuketSir">
        <b>Suket Kumar</b>\n
         Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: suket@nith.ac.in\n
    </string>
    <string name="TalariSir">
        <b>Talari Ganesh </b>\n
        Assistant Professor(Grade-2), Mathematics Science And Computing Department\n
       Phone no. 254101\n
        E-mail: drganesh@nith.ac.in\n
    </string>
    <string name="ArvindSir">
        <b>Arvind Kumar  </b>\n
        <b>Head Of Department</b>\n
        Associate professor,Physics and Photonics Science Department\n
       Phone no. 254148\n
        E-mail: akgathania@nith.ac.in\n
    </string>
    <string name="KuldeepSir">
        <b>Kuldeep Kumar Sharma  </b>\n
        Associate professor,Physics and Photonics Science Department\n
       Phone no. 254117\n
        E-mail: kks@nith.ac.in\n
    </string>
    <string name="RajeshSharmaSir">
        <b>Rajesh Sharma  </b>\n
       Associate professor,Physics and Photonics Science Department\n
       Phone no. 254146\n
        E-mail: rajeshsharma@nith.ac.in\n
    </string>
    <string name="AdilSir">
        <b>Mohd. Adil </b>\n
        Assistant Professor (Grade-1), Management Department\n
       Phone no. 254100\n
        E-mail: adil.dms@nith.ac.in\n
    </string>
    <string name="VivekSir">
        <b>Vivek Tiwari</b>\n
      Assistant Professor (Grade-1), Management Department\n
       Phone no. 254100\n
        E-mail: vivek.dms@nith.ac.in\n
    </string>
    <string name="neerajSir">
        <b>Neeraj Dhiman  </b>\n
        Assistant Professor (Grade-2), Management Department\n
       Phone no. 254100\n
        E-mail: neerajdhiman@nith.ac.in\n
    </string>
    <string name="SachinSir">
        <b>Sachin Kumar </b>\n
         Assistant Professor (Grade-2), Management Department\n
       Phone no. 254100\n
        E-mail: sachin@nith.ac.in\n
    </string>
    <string name="ShampyMam">
        <b>Shampy Kamboj</b>\n
         Assistant Professor (Grade-2), Management Department\n
       Phone no. 254100\n
        E-mail: shampy@nith.ac.in\n
    </string>
    <string name="RichaMam">
        <b>RichaJoshi </b>\n
        Assistant Professor (Grade-2), Management Department\n
       Phone no. 254100\n
        E-mail: richajoshi@nith.ac.in\n
    </string>
    <string name="AshwaniChandel">
        <b>Ashwani Chandel </b>\n
       Professor and Dean , ELectrical Engineering Department\n
       Phone no. 254534\n
        E-mail: ashchandelin@nith.ac.in\n
    </string>
    <string name="RamNaresh">
        <b>Ram Naresh Sharma</b>\n
        Professor and Dean , ELectrical Engineering Department\n
       Phone no.  254526\n
        E-mail: rnaresh@nith.ac.in\n
    </string>
    <string name="SushilChauhan">
        <b>Sushil Chauhan </b>\n
       Professor and Dean , ELectrical Engineering Department\n
       Phone no. 254525\n
        E-mail: sushil@nith.ac.in\n
    </string>
    <string name="YRsood">
        <b>Joy Pal  </b>\n
       Professor and Dean , ELectrical Engineering Department\n
       Phone no. 254522\n
        E-mail: yrsood@nith.ac.in\n
    </string>
    <string name="BharatBhushan">
        <b>Bharat Bhushan</b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254540\n
        E-mail: bhushan@nith.ac.in\n
    </string>
    <string name="oprahi">
        <b>O.P.Rahi </b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254542 \n
        E-mail: oprahi@nith.ac.in\n
    </string>
    <string name="RAjKumar">
        <b>Raj Kumar Jarial </b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254538 \n
        E-mail: jarial@nith.ac.in\n
    </string>
    <string name="RavinderNath">
        <b>Ravinder Nath Sharma  </b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254532\n
        E-mail:   nath@nith.ac.in \n
    </string>
    <string name="VeenaSharma">
        <b>Veena Sharma</b>\n
        <b>Head Of Department</b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254536\n
        E-mail: veena@nith.ac.in\n
    </string>
    <string name="ZAkir">
        <b>Zakir Hussain</b>\n
        Associate Professor, ELectrical Engineering Department\n
       Phone no. 254530\n
        E-mail: zahussain@nith.ac.in\n
    </string>
    <string name="AmitKaul">
        <b>Amit Kaul</b>\n
       Assistant Professor (Grade-1), ELectrical Engineering Department\n
       Phone no. 254544\n
        E-mail: amitkaul@nith.ac.in\n
    </string>
    <string name="anilkumaryadv">
        <b>AnilKumarYadav </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254501\n
        E-mail: anilkyadav@nith.ac.in\n
    </string>
    <string name="BhartiKoul">
        <b>Bharti Koul  </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254550\n
        E-mail: bhartibakshi@nith.ac.in\n
    </string>
    <string name="Chandrasekran">
        <b>Chandrasekran S  </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254501\n
        E-mail: chandru@nith.ac.in\n
    </string>
    <string name="HimeshHanda">
        <b>Himesh Handa</b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254546\n
        E-mail: himeshhanda@nith.ac.in\n
    </string>
    <string name="ManishaSharma">
        <b>Manisha Sharma  </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254501\n
        E-mail: manisha@nith.ac.in\n
    </string>
    <string name="RajanKumar">
        <b>Rajan Kumar </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
        Phone no. 254501\n
        E-mail: rajan@nith.ac.in\n
    </string>
    <string name="RajeshKumar">
        <b>Rajesh Kumar </b>\n
       Assistant Professor (Grade-2), ELectrical Engineering Department\n
       Phone no. 254548\n
        E-mail: rajesh_kumar@nith.ac.in\n
    </string>
</resources>