<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_1"
    android:layout_marginLeft="2dp"
    tools:context=".elec_1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/firstlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_9"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/VeenaSharma"
                android:textColor="@color/yellow"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_1"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/AshwaniChandel"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_2"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RamNaresh"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="5dp"
            android:weightSum="4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_3"
                android:scaleType="fitXY"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/SushilChauhan"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_4"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/YRsood"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_5"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/BharatBhushan"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_6"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/oprahi"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_7"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RAjKumar"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_8"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RavinderNath"
                android:textColor="@color/white"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_10"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/ZAkir"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_11"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/AmitKaul"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_12"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/anilkumaryadv"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_13"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/BhartiKoul"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_14"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/Chandrasekran"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_15"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/HimeshHanda"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="5dp"
            android:weightSum="4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_16"
                android:scaleType="fitXY"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/ManishaSharma"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_17"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RajanKumar"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/elec_18"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RajeshKumar"
                android:textColor="@color/white"/>
        </LinearLayout>



    </LinearLayout>
</ScrollView>
</LinearLayout>