<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_1"
    android:layout_marginLeft="2dp"
    tools:context=".management_1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/firstlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ydsir"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/YDSharmaSir"
                android:textColor="@color/yellow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/manage_1"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/AdilSir"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/manage_2"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/VivekSir"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="5dp"
            android:weightSum="4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/manage_3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/neerajSir"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/manage_4"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/SachinSir"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/manage_5"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/ShampyMam"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/manage_6"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:textIsSelectable="true"
                android:text="@string/RichaMam"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
</LinearLayout>